<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Space Trivia</string>
    <string name="categories">Trivia Categories</string>
    <string name="scores">Trivia High Scores</string>
    
    <string name="new_round_label">New Round</string>
    <string name="high_scores_label">High Scores</string>
    <string name="options_label">Options</string>
    <string name="main_menu_label">Main Menu</string>
    <string name="share_score_label">Share Score</string>
    
    <string name="play_sounds">Play Sounds</string>
    
    <string name="question">Question</string>
    
    <string name="next_question">Next Question</string>
    
    <string name="content_desc_logo">Space Trivia logo</string>
    
    <string name="complete_round">Complete Round</string>
    <string name="round_summary">Round Summary</string>
    
    <string name="answered">Answered</string>
    <string name="of">of</string>
    <string name="questions_correctly">questions correctly.</string>
    
    <string name="no_questions_answered">No questions answered yet.</string>
    
    <string name="share_score_part_1">I got</string>
    <string name="share_score_part_2">of questions correct in the</string>
    <string name="share_score_part_3">category in Space Trivia!</string>
    
    <string name="share_via">Share via</string>

</resources>